# homelab

./: .gitignore  README.md  caddy-security.Dockerfile  caddy.Dockerfile  caddy.docker-compose.yml  duckdns.docker-compose.yml  home-assistant.docker-compose.yml  portainer.docker-compose.yml  pyproject.toml
infra/: ai_setup.py  basic_setup.py  cloudlab_setup.py  coding_setup.py  copy_ssh_key.py  create_user.py  deploy.py  guacamole_setup.py  harden_server.py  home_assistant_setup.py  kind_setup.py  magic_mirror_setup.py  proxmox_setup.py  viz_setup.py
magic_mirror/: config.js
oci/: .terraform.lock.hcl  main.tf
